--- a/ui/package.json
+++ b/ui/package.json
@@ -27,7 +27,14 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vitest": "^0.25.3"
+		"vitest": "^0.25.3",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"svelte-preprocess": "^5.0.3",
+		"autoprefixer": "^10.4.7",
+		"tailwindcss": "^3.1.5",
+		"@tailwindcss/forms": "^0.5.2",
+		"daisyui": "^2.18.1"
 	},
 	"type": "module"
 }
