--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,11 +10,14 @@ python = "^3.11"
 fastapi = "^0.95.1"
 pydantic = "^1.10.7"
 websocket = "^0.2.1"
+cached-property = "^1.5.2"
+uvicorn = "^0.22.0"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.264"
 pytest = "^7.3.1"
+ipdb = "^0.13.13"
 
 [build-system]
 requires = ["poetry-core"]
