--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,12 +12,14 @@ pydantic = "^1.10.7"
 websocket = "^0.2.1"
 cached-property = "^1.5.2"
 uvicorn = "^0.22.0"
+websockets = "^11.0.3"
 
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.0.264"
 pytest = "^7.3.1"
 ipdb = "^0.13.13"
+websocket-client = "^1.5.2"
 
 [tool.ruff]
 # Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
